--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -38,7 +38,7 @@ canvas {
                 <p>I am a programmer who used different computer languages, tools and computer 
                     related knowledge to develop different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
                     I always have full passion in programming, knowing tools and software engineering method 
-                    well, loving programming and debugging, and feel happy about writing good document to deliver readable and maintainable software.</p>
+                    well, loving programming and debugging, and feel happy about writing good document to deliver more readable and maintainable software.</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -215,7 +215,7 @@ canvas {
               <li><p style="margin-left:50px;">After this implementation, the code is running more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that won’t be run. 
               In this situation, operator has no idea of the test result since test result is displayed after all test items finish execution. I implement a mechanism to jump out from the test item (by restore the stack and cpu registers status). 
               My USA's coworker call it tiny OS. It's c++ plus few hundred lines of mips assembly with "observe pattern" of "design pattern".</p></li>
-            <li><p style="margin-left:25px;">Apply Verilog and book “Computer Architecture” knowledge to change Cpu0 verilog code for my llvm backend compiler support to become a real cpu design in market.</p></li>
+            <li><p style="margin-left:25px;">Apply knowledge from Verilog and book “Computer Architecture” to change the Verilog code of Cpu0 to become a real cpu design in market for my llvm backend compiler support.</p></li>
         </article>
       </div>
 
@@ -242,7 +242,7 @@ canvas {
         <article>
           <li><p>Study book “Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Implement the mini process mechanism as mentioned in above section "CPU architecture study".</p></li>
+            <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism as mentioned in above section "CPU architecture study".</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -255,8 +255,8 @@ canvas {
         <article>
           <li><p>Study book “Design Patterns” and "OOA Analysis related books and tools (Rational Rose, ...)"</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Lead the Board Level Test Code framework project in Motorola, implement the framework with 4 other members.</p></li>
-              <li><p style="margin-left:50px;"> Utilize four patterns in "design pattern" and Rational Ross tool to create framework, document and generate code.</p></li>
+            <li><p style="margin-left:25px;">In work the Board Level Test Code framework project in Motorola as mentioned above.</p></li>
+              <li><p style="margin-left:50px;"> Utilize five patterns in "design pattern" and Rational Ross tool to create framework, document and generate code.</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -268,7 +268,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
