--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Chung-Shu Chen - 詳細履歷</title>
+<title>陳鍾樞 - 詳細履歷</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
+<meta name="description" content="陳鍾樞 - 詳細履歷"/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="../css/resume.css">
