--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Chung-Shu Chen - 詳細履歷</title>
+<title>陳鍾樞 - 履歷</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
+<meta name="description" content="陳鍾樞 - 履歷"/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="../css/resume.css">
@@ -35,8 +35,8 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>陳鍾樞 &nbsp;&nbsp;&nbsp;&nbsp; (03)6681193, &nbsp;&nbsp;&nbsp;&nbsp; 0970577923 &nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
-        <p>我是位有經驗的軟體工程師，在工作中運用不同軟體語言、工具與相關知識開發數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
-        此外，對寫程式總是懷抱熱情，相當暸解工具與軟體工程方法，並運用文件撰寫以產生具可讀性及可維護性的軟體。</p>
+        <p>我是位有軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
+        我對寫程式總是懷抱熱情，相當暸解工具與軟體工程方法，喜愛思考程式與除錯，並對撰寫文件以產生較有可讀性及可維護性的軟體感到莫名的快樂。</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -148,7 +148,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> 前主管推薦函: https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/ch1/RecommendationLetter_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1//RecommendationLetter_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
