--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -3,7 +3,7 @@
 <head>
 <title>Chung-Shu Chen - Resume</title>
 
-<meta name="description" content="Chung-Shu Chen - CV (detail resume)"/>
+<meta name="description" content="Chung-Shu Chen - Resume"/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="../css/resume.css">
