--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -36,7 +36,7 @@ canvas {
       <ul>
         <p>陳鍾樞 &nbsp;&nbsp;&nbsp;&nbsp; (03)6681193, &nbsp;&nbsp;&nbsp;&nbsp; 0970577923 &nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
         <p>我是位有軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
-        我對寫程式總是懷抱熱情，相當暸解工具與軟體工程方法，喜愛思考程式與除錯，並對撰寫文件以產生較有可讀性及可維護性的軟體感到莫名的快樂。</p>
+        對寫程式總是懷抱熱情，暸解工具與軟體工程方法，喜愛思考程式與除錯，並對撰寫文件以產生較有可讀性及可維護性的軟體感到快樂。</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -76,6 +76,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
+        <p style="font-size: 0.7em;">很高興我的作品已被LLVM接受，出現在 <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>如何建立LLVM 後端編譯器 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
         <p>如何建立LLVM 後端系統工具 &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
       </div>
@@ -260,7 +261,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://jonathan2251.github.io/ws/ch1/RecommendationLetter_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1/RecommendationLetter_Marvell.pdf</a></p>
+        <p style="font-size: 0.7em;"><a href="https://jonathan2251.github.io/ws/ch1/RecommendationLetter_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1//RecommendationLetter_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
