--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -35,15 +35,15 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>Chung-Shu Chen 陳鍾樞 (03)6681193, 0970577923 <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
-        <p>I am a programmer who used different computer languages, tools and computer 
-                    related knowledge to develop different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
-                    I always have full passion in programming, knowing tools and software engineering method 
-                    well, loving programming and debugging, and feel happy about writing good document to deliver more readable and maintainable software.</p>
+        <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
+        different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
+        I always have full passion in programming, knowing tools and software engineering method well, loving programming 
+        and debugging, and feel happy about writing good document to deliver more readable and maintainable software.</p>
       </ul>
     </div>
     <div class="clear"></div>
     <div class="title">
-      <h1>CV (detail resume)</h1>
+      <h1>CV (DETAIL RESUME)</h1>
     </div>
   </div>
   
@@ -77,6 +77,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
+        <p style="font-size: 0.7em;">I am proud of my work is accepted by LLVM documentation, appears at <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
         <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
       </div>
@@ -265,7 +266,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf</a></p>
+        <p style="font-size: 0.7em;"><a href="https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
