--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -198,15 +198,15 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <li><p>研讀書籍“計算機組織與設計：軟硬體介面”，“計算機結構 – 量的研究”，Mips與Broadcom處理器使用手冊。還有Verilog語言與工具研讀。</p></li>
+          <li><p>研讀書籍“計算機組織與設計：軟硬體介面”，“計算機結構 – 量的研究”與Mips與Broadcom處理器使用手冊。還有Verilog語言與工具研究。</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">發現Code Warrior支援Mips處理器的編譯器錯誤。此錯誤來自preprocess #pack(1)的程式碼生成。</p></li>
+            <li><p style="margin-left:25px;">發現Code Warrior編譯器支援Mips處理器中的錯誤。此錯誤來自preprocess #pack(1)的程式碼生成。</p></li>
               <li><p style="margin-left:50px;">Email告知Code Warrior，並用附上我所寫的範例程式指出此錯誤，他們通知，此錯誤來自支援mips處理器的後端編譯器程式碼。</p></li>
             <li><p style="margin-left:25px;">使用mips組合語言製作"微作業系統"機制，以解決程式掛住、無法運行的問題。</p></li>
               <li><p style="margin-left:50px;">此後系統變得更加穩定且快速。當一測試項目死當時，其他測試項目皆無法繼續執行，此情況是一嚴重問題，因為測試結果是在全部測試項目完成後，才能顯示，
-              遇此狀況，作業員無法得知測試結果。我製作一個time out機制，讓死當的測試項目得以被略過(藉由從預存的堆疊指標與處理器暫存器還原其值)，美國同事稱它為微作業系統，
+              遇此狀況，作業員無法得知測試結果。我製作一個time out機制，讓死當的測試項目得以被略過(藉由從預存的堆疊指標與暫存器還原其值)，美國同事稱它為微作業系統，
               使用c++加上幾百行的mips組合語言的"observe pattern")。</p></li>
-            <li><p style="margin-left:25px;">運用Verilog與書籍“計算機結構 – 量的研究”所學，修改pu0 verilog程式碼使其更符合llvm後端編譯器支援的實際處理器設計。</p></li>
+            <li><p style="margin-left:25px;">運用Verilog與書籍“計算機結構 – 量的研究”所學，修改Cpu0 Verilog程式碼使其更符合llvm後端編譯器支援的實際處理器設計。</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -220,7 +220,7 @@ canvas {
           <li><p>研究llvm前端與後端設計，研讀書籍“編譯系統設計 Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc與lex工具。</p></li>
           <li><p>工作應用：</p></li>
             <li><p style="margin-left:25px;">為教學與自我學習，設計Cpu0 llvm後端編譯器（列在此履歷前面“我的開法原始碼專案”），一些讀者問我一些問題，我用下班時間回答他們。</p></li>
-          <li><p>運用編譯器語法分析工具yacc與lex，於測試站程式設計(我訂定一個簡單的script語言，如此一來，我與產線工程師可透過此script語言，指定測試項目）。</p></li>
+          <li><p>運用編譯器語法分析工具yacc與lex，設計自動化測試站(我訂定一個簡單的script語言，如此一來，我與產線工程師可透過此script語言，指定測試項目）。</p></li>
         </article>
       </div>
 
@@ -232,7 +232,7 @@ canvas {
         <article>
           <li><p>研讀書籍“Linux驅動程式 Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">如上“計算機架構學習與應用”所列，我參考作業系統並使用mips組合語言來設計"微作業系統"機制，以解決程式掛住無法運行的問題。</p></li>
+            <li><p style="margin-left:25px;">如上，“計算機架構學習與應用”所列，我參考作業系統並使用mips組合語言來設計"微作業系統"機制，以解決程式死當無法運行的問題。</p></li>
             <li><p style="margin-left:25px;">如上，在Motorola時，依主管要求，與其他四位成員建立產線測試程式共用架構。</p></li>
               <li><p style="margin-left:50px;">撰寫I/O轉向機制，讓新版的程式更容易移植。</p></li>
         </article>
@@ -245,11 +245,11 @@ canvas {
 
       <div class="sectionContent">
         <article>
-          <li><p>研讀書籍“Design Patterns” and "物件導向分析相關書籍與工具(Rational Rose, ...)"</p></li>
+          <li><p>研讀書籍“Design Patterns”與"物件導向分析書籍與工具(Rational Rose, ...)"</p></li>
           <li><p>工作應用：</p></li>
             <li><p style="margin-left:25px;">在Motorola時，依主管要求，與其他四位成員建立產線測試程式共用架構。</p></li>
-              <li><p style="margin-left:50px;">使用Rational Ross工具設計此架構。我應用物件導向分析、設計知識以及UML工具，從事此任務。</p></li>
-              <li><p style="margin-left:50px;">使用書籍“Design Patterns”中的五種patterns以及Rational Ross工具建立程式共用架構、文件及產生程式碼。</p></li>
+              <li><p style="margin-left:50px;">使用Rational Ross工具設計此架構。我應用物件導向分析、設計以及UML工具，從事此任務。</p></li>
+              <li><p style="margin-left:50px;">使用書籍“Design Patterns”中的五種patterns以及Rational Ross工具建立程式共用架構、文件，並產生程式碼。</p></li>
         </article>
       </div>
       <div class="clear"></div>
