--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -116,7 +116,7 @@ canvas {
       </div>
     
       <div id="container"" style="solid #000000;">
-        <canvas id="canvas2" width="800" height="200"></canvas>
+        <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> drawExperiences(); </script>
     </section>
