--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -117,7 +117,7 @@ canvas {
       </div>
             
       <div id="container"" style="solid #000000;">
-        <canvas id="canvas2" width="800" height="200"></canvas>
+        <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> drawExperiences(); </script>
     </section>
