--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -118,7 +118,7 @@ canvas {
       </div>
             
       <div id="container"" style="solid #000000;">
-        <canvas id="canvas2" width="800" height="190"></canvas>
+        <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> drawExperiences(); </script>
     </section>
