--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -118,7 +118,7 @@ canvas {
       <div id="container"" style="solid #000000;">
         <canvas id="canvas2" width="800"></canvas>
       </div>
-      <script> drawExperiences(); </script>
+      <script> drawExperience(); </script>
     </section>
     
     <section>
