--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -167,11 +167,11 @@ canvas {
         <article>
           <li><p>Introduce polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p></li>
             <li><p style="margin-left:25px;">The advantage is that it might be 500% speed up in some numerical
-              application program, such as matrix multiplication, or other kind of matrix
-              operation. Sadly, Marvell's CPUs are not used in numerical applications.
+              application program, such as matrix multiplication, or other kind of matrix operation. 
+              Sadly, Marvell's CPUs are not used in numerical applications. But maybe it will have for 64 bits ARM in future.
             </p></li>
-          <li><p>Apply compiler code generation idea to propose this solution and Csim team adopted it.</p></li>
-          <li><p>Complete cmake and adjust python programs to build Csim with cmake. It save the effort in maintaining both make and windows project file. Cmake also support iMac user.</p></li>
+          <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it.</p></li>
+          <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user.</p></li>
             <li><p style="margin-left:25px;">Present the better option for cmake writting.</p></li>
               <li><p style="margin-left:50px;">The version of cmake in Csim server is 2.6.x, however, the cmake 2.8.8 provides shared object to save the unnecessary compilation.</p></li>
             <li><p style="margin-left:25px;">Report performance comparing between cmake and ninja.</p></li>
@@ -186,8 +186,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <li><p>Designe QIP7kP1 and P2 board level production line testing code. Over 500 millions units of QIP7k model of Set Top Box are tested with this code on production line, as well as shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) are ported from QIP7kP1 & QIP7kP2.</p></li>
-          <li><p>Combine mips cpu and software engineer knowledge to create a frame work for board level testing code as manager request.</p></li>
+          <li><p>Designe QIP7kP1 and P2 board level production line testing code. Over 500 millions units of QIP7k model of Set Top Box are tested with this code on production line and shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) are ported from QIP7kP1 & QIP7kP2.</p></li>
+          <li><p>Combine mips cpu and software engineer knowledge, lead and cowork with other four members to create a frame work for board level testing code as manager request.</p></li>
             <li><p style="margin-left:25px;">Use Rational Ross UML tool to design the frame work. In this task. I apply object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p></li>
             <li><p style="margin-left:25px;">Implement the I/O redirection mechanism to make the new version of code porting task easier.</p></li>
             <li><p style="margin-left:25px;">Implement Board Level Test with design pattern.</p></li>
@@ -208,12 +208,12 @@ canvas {
         <article>
           <li><p>Study books “Computer Organization and Design: The Hardware/Software Interface”, “Computer Architecture – A Quantitative Approach”, Mips and Broadcom CPU user manual. Verilog language/tool study.</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Find the bug of Code Warrior's compiler in supporting Mips cpu. The bug come from #pack(1) statement code generation.</p></li>
-              <li><p style="margin-left:50px;">Email Code Warrior the bug along with the example code I write for identify this bug, and they admit that is a bug from their compiler for mips backend support.</p></li>
+            <li><p style="margin-left:25px;">Find the bug of Code Warrior's compiler in supporting Mips cpu. The bug come from code generation for #pack(1) statement.</p></li>
+              <li><p style="margin-left:50px;">Email Code Warrior the bug along with the example code I write for identifing this bug, and they admit that is a bug from their compiler for mips backend support.</p></li>
             <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism with mips assembly language to solve the halting problem in some program.</p></li>
-              <li><p style="margin-left:50px;">After this implementation, the code is running more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that won’t be run. 
-              In this situation, operator has no idea of the test result since test result is displayed after all test items finish execution. I implement a mechanism to jump out from the test item (by restore the stack and cpu registers status). 
-              My USA's coworker call it tiny OS. It's c++ plus few hundred lines of mips assembly with "observe pattern" of "design pattern".</p></li>
+              <li><p style="margin-left:50px;">After this implementation, the code has run more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that one won’t be run. 
+              In this situation, operator has no idea of the test result since test result is displayed after all test items finish execution. I implement a "time out" mechanism to jump out from the test item (by restore the stack and cpu registers status). 
+              My USA's coworker call it "tiny OS". It's c++ plus few hundred lines of mips assembly with "observe pattern" of "design pattern".</p></li>
             <li><p style="margin-left:25px;">Apply knowledge from Verilog and book “Computer Architecture” to change the Verilog code of Cpu0 to become a real cpu design in market for my llvm backend compiler support.</p></li>
         </article>
       </div>
@@ -225,7 +225,7 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <li><p>Studied llvm front & backend design. Studied book “Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc and lex tool.</p></li>
+          <li><p>Study llvm frontend & backend design. Study book “Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc and lex tool.</p></li>
           <li><p>Apply in work:</p></li>
             <li><p style="margin-left:25px;">Implement the Cpu0 llvm compiler backend from scratch for tutorial purpose, and writing books as in my publish books. A lot of readers have been asking me questions and I answering them out of working time.</p></li>
           <li><p>Apply the compiler syntax parsing tool, yacc & lex, in test station design (Production line engineer and I can specify test items for each station in script language I defined).</p></li>
