--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -145,11 +145,11 @@ canvas {
     
     <section>
       <div class="sectionTitle">
-        <h1>非論文的碩士作品</h1>
+        <h1>其餘作品</h1>
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> 修影像處理課程與撰寫Jpeg decoder程式</a></p>
+        <p> 修影像處理課程與<a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG">撰寫Jpeg decoder程式</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 如此文件以及<a href="http://jonathan2251.github.io/ws/ch1/index.html">我個人網頁</a></p>
       </div>
       <div class="clear"></div>
     </section>
