--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -146,11 +146,11 @@ canvas {
     
     <section>
       <div class="sectionTitle">
-        <h1>WORK OF MASTER DEGREE</h1>
+        <h1>OTHER WORK</h1>
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Took course "Image processing" and programmed Jpeg decoder</a></p>
+        <p> Took course "Image processing" and programmed <a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Jpeg decoder</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As this CV and <a href="http://jonathan2251.github.io/ws/index.html"> my personal web site</a></p>
       </div>
       <div class="clear"></div>
     </section>
