rename recommendation letter file

--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -149,7 +149,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p style="font-size: 0.7em;"><a href="https://jonathan2251.github.io/ws/ch1/RecommendationLetter_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1//RecommendationLetter_Marvell.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1//RL_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
