--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -266,7 +266,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p style="font-size: 0.7em;"><a href="https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RecommendationLetter_Marvell.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RL_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
