--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -177,6 +177,7 @@ canvas {
               application program, such as matrix multiplication, or other kind of matrix operation. 
               Sadly, Marvell's CPUs are not used in numerical applications. But maybe it will have for 64 bits ARM in future.
             </p></li>
+          <li><p>Implement co-simulator(our name:Csim) for a few Marvell's ARM based cpu.</p></li>
           <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it.</p></li>
           <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user.</p></li>
             <li><p style="margin-left:25px;">Present the better option for cmake writting.</p></li>
@@ -196,8 +197,6 @@ canvas {
           <li><p>Designe QIP7kP1 and P2 board level production line testing code. Over 500 millions units of QIP7k model of Set Top Box are tested with this code on production line and shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) are ported from QIP7kP1 & QIP7kP2.</p></li>
           <li><p>Combine mips cpu and software engineer knowledge, lead and cowork with other four members to create a frame work for board level testing code as manager request.</p></li>
             <li><p style="margin-left:25px;">Use Rational Ross UML tool to design the frame work. In this task. I apply object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p></li>
-            <li><p style="margin-left:25px;">Implement the I/O redirection mechanism to make the new version of code porting task easier.</p></li>
-            <li><p style="margin-left:25px;">Implement Board Level Test with design pattern.</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -248,6 +247,8 @@ canvas {
           <li><p>Study book “Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>Apply in work:</p></li>
             <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism as mentioned in above section "CPU architecture study".</p></li>
+            <li><p style="margin-left:25px;">During working the Board Level Test Code framework project in Motorola as mentioned above:</p></li>
+            <li><p style="margin-left:50px;">Implement the I/O redirection mechanism to make the new version of code porting task easier.</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -260,7 +261,7 @@ canvas {
         <article>
           <li><p>Study book “Design Patterns” and "OOA Analysis related books and tools (Rational Rose, ...)"</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">In work the Board Level Test Code framework project in Motorola as mentioned above.</p></li>
+            <li><p style="margin-left:25px;">During working the Board Level Test Code framework project in Motorola as mentioned above:</p></li>
               <li><p style="margin-left:50px;"> Utilize five patterns in "design pattern" and Rational Ross tool to create framework, document and generate code.</p></li>
         </article>
       </div>
