--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -185,7 +185,7 @@ canvas3 {
               application program, such as matrix multiplication, or other kind of matrix operation. 
               Sadly, Marvell's CPUs are not used in numerical applications. But maybe it will have for 64 bits ARM in future.
             </p></li>
-            <img src="../images/polly_benchmark.png" width="600" height="150"/>
+            <p style="margin-left:40px;"><img src="../images/polly_benchmark.png" width="600" height="150"/></p>
           <li><p>Implement co-simulator(our name:Csim) for a few Marvell's ARM based cpu.</p></li>
           <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
           <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
