--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -54,7 +54,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++嵌入系統軟體開發經驗，相當暸解軟體與除錯。</p>
+          <p>二十年c/c++嵌入系統軟體開發經驗，五年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
         </div>
       </article>
       <div class="clear"></div>
