--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -55,7 +55,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>Over 20 years experience in c/c++ embedded system programming, well knowledge in software development and debugging.</p>
+          <p>Over 20 years experience in c/c++ embedded system programming, 5 years compiler toolchain related experience and research in parallel processing for master degree.</p>
         </div>
       </article>
       <div class="clear"></div>
