--- a/en/cv_compiler_cschen.html
+++ b/en/cv_compiler_cschen.html
@@ -20,13 +20,6 @@ canvas {
     -ms-user-select: none;
 }
 </style>
-<style>
-canvas3 {
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}
-</style>
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -62,7 +55,7 @@ canvas3 {
         </div>
         
         <div class="sectionContent">
-          <p>Over 20 years experience in c/c++ embedded system programming, well knowledge in software development and debugging.</p>
+          <p>20 years experience in c/c++ embedded system programming, 5 years compiler toolchain related experience and research in parallel processing for master degree.</p>
         </div>
       </article>
       <div class="clear"></div>
