--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -202,7 +202,7 @@ canvas {
         <article>
           <li><p>Designe QIP7kP1 and P2 board level production line testing code. Over 500 millions units of QIP7k model of Set Top Box are tested with this code on production line and shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) are ported from QIP7kP1 & QIP7kP2.</p></li>
           <li><p>Combine mips cpu and software engineer knowledge, lead and cowork with other four members to create a frame work for board level testing code as manager request.</p></li>
-            <li><p style="margin-left:25px;">Use Rational Ross UML tool to design the frame work. In this task. I apply object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p></li>
+            <li><p style="margin-left:25px;">Use Rational Ross UML tool to design the frame work. In this task, I apply object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p></li>
         </article>
       </div>
       <div class="clear"></div>
