--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -121,11 +121,12 @@ canvas {
         <canvas id="canvas2" width="800"></canvas>
       </div>
       <script> 
-        var Config = makeStruct("canvasId fontSize gap radius dotX period rightText");
-        var period = createWorkPeriod();
-        var rightText = createWorkContent();
-        config = new Config("canvas2", 12, 2, 5, 150, period, rightText);
-        drawExperience(config);
+        var Config = makeStruct("canvasId fontSize gap radius dotX");
+        var config = new Config("canvas2", 12, 2, 5, 150);
+        var workPeriod = createWorkPeriod();
+        var workContent = createWorkContent();
+        var experience = Experience(workPeriod, workContent);
+        experience.draw(config);
       </script>
     </section>
     
