--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -112,10 +112,10 @@ canvas {
     
     <section>
       <div class="sectionTitle">
-        <h1>經驗</h1>
+        <h1 class="instaFade delayOne">經驗</h1>
       </div>
     
-      <div id="container"" style="solid #000000;">
+      <div id="container"" style="solid #000000;" class="quickFade delayOne">
         <canvas id="canvas2" width="800"></canvas>
       </div>
       <script>
@@ -123,7 +123,7 @@ canvas {
         var config = new Config("canvas2", 12, 2, 5, 150);
         var workPeriod = createWorkPeriod();
         var workContent = createWorkContent();
-        var experience = Experience(workPeriod, workContent);
+        var experience = new Experience(workPeriod, workContent);
         experience.draw(config);
       </script>
     </section>
