--- a/en/more.html
+++ b/en/more.html
@@ -68,7 +68,7 @@
       
           <div class="content_container">
             <h3>Resume:</h3>
-              <a href="http://jonathan2251.github.io/ws/en/resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/resume_cschen.html</a><br>
+              <a href="resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Resume(html)" width="32" height="32" /> resume_cschen.html</a><br>
               <a href="http://jonathan2251.github.io/ws/en/resume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/resume_cschen.pdf</a>
           </div><!--close content_container-->
 
