--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -157,7 +157,7 @@ canvas {
       
       <div class="sectionContent">
         <p> 修影像處理課程與撰寫:<a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG">Jpeg decoder程式</a>  </p>
-        <p> 網頁與javascript:<a href="http://jonathan2251.github.io/ws/ch1/resume.html"> html簡歷</a> 與 <a href="http://jonathan2251.github.io/ws/ch1/index.html">我個人網頁</a></p>
+        <p> 網頁與javascript:<a href="resume_cschen.html"> html簡歷</a> 與 <a href="index.html">我個人網頁</a></p>
       </div>
       <div class="clear"></div>
     </section>
