--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -158,7 +158,7 @@ canvas {
       
       <div class="sectionContent">
         <p> Took course "Image processing" and program: <a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Jpeg decoder</a> </p>
-        <p> Web and javascript: <a href="http://jonathan2251.github.io/ws/en/resume.html"> As the resume</a> and <a href="http://jonathan2251.github.io/ws/index.html"> my personal web site</a></p>
+        <p> Web and javascript: <a href="resume_cschen.html"> As my resume</a> and <a href="index.html"> my personal web site</a></p>
       </div>
       <div class="clear"></div>
     </section>
