Achievement, my open source project

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -211,7 +211,7 @@ canvas {
           <li><p>Study the llvm linker open source code, lld, and llvm run time library open source code, compiler-rt, and implement elf linker and software floating point library for Cpu0.</p></li>
           <li><p>The upper half of the following figure is the work flow and software package of a computer program be generated and executed. IR stands for Intermediate Representation. 
           The lower half is the llvm's work flow. The yellow and green parts are implemented in my books (listed as my open source project above), Tutorial: Create an LLVM Backend compiler and Tutorial: Create an LLVM Backend toolchain respectively.</p></li>
-          <p style="margin-left:40px;"><img src="../images/mywork_1.jpg" width="600" height="120"/></p>
+          <p style="margin-left:20px;"><img src="../images/mywork_1.jpg" width="100%" height="120"/></p>
         </article>
       </div>
       <div class="clear"></div>
