--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -203,7 +203,7 @@ canvas {
           <li><p>研讀llvm連結器原始碼（lld）與llvm執行時期所支援的函式庫原始碼（compiler-rt），撰寫支援Cpu0計算機elf連結器與浮點數函式庫。</p></li>
           <li><p>下圖的上半部是計算機產生與執程式的流程圖。IR是中間碼的縮寫（Intermediate Representation）。
           下半部是llvm的流程圖。黃色與綠色分別是我書中（如上，我的開法原始碼專案），如何建立LLVM後端編譯器與如何建立LLVM後端系統工具中的作品。</p></li>
-          <p style="margin-left:40px;"><img src="../images/mywork_1.jpg" width="600" height="120"/></p>
+          <p style="margin-left:20px;"><img src="../images/mywork_1.jpg" width="100%" height="120"/></p>
         </article>
       </div>
       <div class="clear"></div>
