--- a/en/mywork.html
+++ b/en/mywork.html
@@ -41,7 +41,7 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend books&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/mywork_1.png" alt="&quot;LLVM backend books&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;Working hard&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_3.jpg" alt="&quot;Change fast&quot;" /></li>
         </ul>
