--- a/ch1/mywork.html
+++ b/ch1/mywork.html
@@ -41,7 +41,7 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend 書籍&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/mywork_1.png" alt="&quot;LLVM backend 書籍&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;辛苦的工作&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_3.jpg" alt="&quot;改變真快&quot;" /></li>
         </ul>
