resume and certificate

--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -225,6 +225,7 @@ canvas {
     <section>
       <div class="sectionTitle">
         <h1>計算機、編譯器、作業系統與軟體工程相關經驗</h1>
+        <p style="margin-left:20px;"><img src="../images/study_and_apply.png" width="90%" height="250"/></p>
       </div>
       <div class="sectionTitle">
         <h1>計算機結構學習與應用：</h1>
@@ -253,8 +254,8 @@ canvas {
         <article>
           <li><p>研究llvm前端與後端設計，研讀書籍“編譯系統設計 Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc與lex工具。</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">為教學與自我學習，設計Cpu0 llvm後端編譯器（列在此履歷前面“我的開法原始碼專案”），一些讀者問我一些問題，我用下班時間回答他們。</p></li>
-          <li><p>運用編譯器語法分析工具yacc與lex，設計自動化測試站(我訂定一個簡單的script語言，如此一來，我與產線工程師可透過此script語言，指定測試項目）。</p></li>
+            <li><p style="margin-left:25px;">為教學與自我學習，設計Cpu0 llvm後端編譯器（列在此履歷前面“我的開法原始碼專案”）。</p></li>
+            <li><p style="margin-left:25px;">運用編譯器語法分析工具yacc與lex，設計自動化測試站。</p></li>
         </article>
       </div>
 
@@ -267,8 +268,7 @@ canvas {
           <li><p>研讀書籍“Linux驅動程式 Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>工作應用：</p></li>
             <li><p style="margin-left:25px;">如上，“計算機架構學習與應用”所列，我參考作業系統並使用mips組合語言來設計"微作業系統"機制，以解決程式死當無法運行的問題。</p></li>
-            <li><p style="margin-left:25px;">如上，在Motorola時，依主管要求，與其他四位成員建立產線測試程式共用架構。</p></li>
-              <li><p style="margin-left:50px;">撰寫I/O轉向機制，讓新版的程式更容易移植。</p></li>
+            <li><p style="margin-left:25px;">在Motorola時，撰寫I/O轉向機制，讓新版的程式更容易移植。</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -295,7 +295,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf</a></p>
+        <p><a href="RL_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
