--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -295,7 +295,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="RL_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> 前主管推薦函: https://jonathan2251.github.io/ws/ch1/RL_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
