--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -302,7 +302,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
-        <p><a href="RL_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RL_Marvell.pdf</a></p>
+        <p><a href="https://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/ws/en/RL_Marvell.pdf</a></p>
       </div>
       <div class="clear"></div>
     </section>
