--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -225,7 +225,7 @@ canvas {
     <section>
       <div class="sectionTitle">
         <h1>計算機、編譯器、作業系統與軟體工程相關經驗</h1>
-        <p style="margin-left:20px;"><img src="../images/study_and_apply.png" width="90%" height="250"/></p>
+        <p style="margin-left:20px;"><img src="../images/study_and_apply_ch1.png" width="90%" height="250"/></p>
       </div>
       <div class="sectionTitle">
         <h1>計算機結構學習與應用：</h1>
